--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+     - assets/
      - assets/avatars/
      - assets/icons/
      - assets/chat/
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
